# Medicina-leaderboard

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  secrets.toml.example  sw.js
src/: __init__.py  config.py  models.py  scoring.py
src/integrations/: __init__.py  discord.py  notion.py
src/scrapers/: __init__.py  ankiweb.py
src/ui/: __init__.py  components.py  styles.py
static/: manifest.json
tests/: conftest.py  test_scoring.py
